--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,26 @@ end_date: 2022-05-13
 preliminary_floor_plan_deadline: 2022-04-12
 digital_sign_submission_deadline: 2022-04-28
 incentive_rate_deadline: 2022-04-12
+event_coordinator:
+  name: Karen Elizarraras
+  email: karen.elizarraras@austintexas.gov
+  phone: 5124044209
 utility_coordinator:
   name: Eddy Yanez
   email: eddy.yanez@austintexas.gov
   phone: 5124044233
+security_coordinator:
+  name: Beto Silva
+  email: humberto.silva@austintexas.gov
+  phone: 5124044118
 sales_manager:
   name: Regina Salinas
   email: regina.salinas@austintexas.gov
   phone: 5124044204
-it_coordinator:
-  name: Jeff Moore
-  email: jeff.moore@austintexas.gov
-  phone: 5124044033
+catering_manager:
+  name: Dawn Mosley
+  email: dmosely@levyrestaurants.com 
+  phone: 5124044254
 theme: 
 remote_theme: cityofaustin/jekyll-theme-kocurek@v0.3.4
 searchable: true
